<resources>
    <string name="app_name">AS1</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="start_game">Start Game</string>
    <string name="pocket_brawlers">Pocket Brawlers</string>
    <string name="attack">Attack</string>
    <string name="health">Health</string>
    <string name="fight">Fight</string>
    <string name="back_to_main">Back to Main</string>
    <string name="_0">0</string>
    <string name="drawMsg">It\'s a draw!</string>
    <string name="win2Msg">Brawler 2 Wins!</string>
    <string name="win1Msg">Brawler 1 Wins!</string>
</resources>