<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/leaderboardButton"
        android:layout_width="196dp"
        android:layout_height="74dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="315dp"
        android:text="@string/leaderboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startGameButton" />

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="196dp"
        android:layout_height="74dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="24dp"
        android:text="@string/start_game"
        app:layout_constraintBottom_toTopOf="@+id/leaderboardButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="100dp"
        android:text="@string/pocket_brawlers"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/startGameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>